--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-requisitos-construccion/components/planes-programas-artc/planes-programas-artc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-requisitos-construccion/components/planes-programas-artc/planes-programas-artc.component.html
@@ -50,7 +50,7 @@
           <button
             mat-raised-button
             color="accent"
-            class="btn-table expansion-style--title btn-color h-2em"
+            class="btn-table"
             (click)="openDialogObservacion(element.nombrePlanesProgramas, element.observaciones, element.id)"
           >
             <small class="mr-1em">Observaciones</small>
