--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/form-registrar-seguimiento-semanal/form-registrar-seguimiento-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/form-registrar-seguimiento-semanal/form-registrar-seguimiento-semanal.component.html
@@ -24,7 +24,7 @@
               <p><b>Departamento</b>: {{ seguimientoSemanal.infoProyecto.departamento }} </p>
               <p><b>Municipio</b>: {{ seguimientoSemanal.infoProyecto.municipio }} </p>
               <p><b>Institución Educativa</b>: {{ seguimientoSemanal.infoProyecto.institucionEducativa }} </p>
-              <p><b>Sede</b>: {{ seguimientoSemanal.infoProyecto.sede }} </p>
+              <p><b>Sede educativa</b>: {{ seguimientoSemanal.infoProyecto.sede }} </p>
               <p><b>Fecha del último reporte</b>: {{ seguimientoSemanal.infoProyecto.fechaUltimoReporte !== undefined ? ( seguimientoSemanal.infoProyecto.fechaUltimoReporte.fechaModificacion | date: 'dd/MM/yyyy' ) : 'Sin registro' }} </p>
             </mat-card-content>
         </mat-card>
