--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/manejo-residuos-construccion/manejo-residuos-construccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/manejo-residuos-construccion/manejo-residuos-construccion.component.html
@@ -196,7 +196,7 @@
                 <div class="d-flex justify-content-center size-text-descriptivo">
                     <p class="color-text-descriptivo">
                         <i> 
-                            Indique la ruta de la ubicación de los soportes de la actividad realizada.
+                            Indique la ruta de los documentos de soporte de la actividad realizada.
                         </i>
                     </p>
                 </div>
