--- a/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/planes-programas/planes-programas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/planes-programas/planes-programas.component.html
@@ -168,7 +168,7 @@
           <button
             mat-raised-button
             color="accent"
-            class="btn-table expansion-style--title btn-color h-2em"
+            class="btn-table"
             [ngClass]="getSemaforo(element.observaciones)"
             (click)="openDialog(element.nombrePlanesProgramas, element.observaciones, element.id)"
           >
