--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/table-caracteristicas-especiales/table-caracteristicas-especiales.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/table-caracteristicas-especiales/table-caracteristicas-especiales.component.html
@@ -42,7 +42,7 @@
                 <a  (click)="definirCaracteristicas( element.contratacionProyectoId, element.proyecto.localizacionIdMunicipio )"
                     mat-raised-button
                     color="accent"
-                    class="btn-table expansion-style--title btn-color h-2em"
+                    class="btn-table"
                     [ngClass]="getSemaforo( element.registroCompleto, element )">
                     Definir características
                 </a>
