--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/verificar-solicitud-novedad/verificar-solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/verificar-solicitud-novedad/verificar-solicitud-novedad.component.html
@@ -48,7 +48,7 @@
         <strong>
           Valor del contrato:
         </strong>
-        {{ novedad.proyectosContrato[0].valorTotal }}
+        {{ novedad.proyectosContrato[0].valorTotal | currency:'':'symbol':'3.0' }}
       </p>
       <p>
         <strong>
