--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-calidad/gestion-calidad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-calidad/gestion-calidad.component.html
@@ -371,7 +371,7 @@
                                 <div class="d-flex justify-content-center mt-1em" *ngIf="ensayo.get( 'registroCompleto' ).value === true">
                                   <button mat-raised-button
                                           color="accent"
-                                          class="btn-table expansion-style--title btn-color h-2em w-20"
+                                          class="btn-table w-20"
                                           [ngClass]="semaforoBtnRegistrar( ensayo.get( 'registroCompletoMuestras' ).value )"
                                           (click)="getRegistrarResultados( ensayo.get( 'gestionObraCalidadEnsayoLaboratorioId' ).value )">
                                           <small class="mr-1em btn-color-text">Registrar resultados</small>
@@ -477,7 +477,7 @@
                   <div *ngIf="ensayo.registroCompletoMuestras === false">
                     <button mat-raised-button
                             color="accent"
-                            class="btn-table expansion-style--title btn-color h-2em"
+                            class="btn-table"
                             [ngClass]="semaforoBtnRegistrar( ensayo.registroCompletoMuestras )"
                             (click)="getRegistrarResultados( ensayo.gestionObraCalidadEnsayoLaboratorioId )">
                             <small class="mr-1em btn-color-text">Registrar resultados</small>
