--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-registrar-avance-semanal/tabla-registrar-avance-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-registrar-avance-semanal/tabla-registrar-avance-semanal.component.html
@@ -32,7 +32,7 @@
     </ng-container>
 
     <ng-container matColumnDef="sede">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Sede </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Sede educativa </th>
         <td mat-cell *matCellDef="let element" align="center"> {{ element.sede }} </td>
     </ng-container>
 
@@ -40,7 +40,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha del último reporte </th>
         <td mat-cell *matCellDef="let element" align="center">
           <section *ngIf="element.fechaUltimoReporte === 'Sin registro'"> {{ element.fechaUltimoReporte }} </section>
-          <section *ngIf="element.fechaUltimoReporte !== 'Sin registro'"> {{ element.fechaUltimoReporte | date: 'dd/MM/yyyy' }} </section>
+          <section *ngIf="element.fechaUltimoReporte !== 'Sin registro'"> {{ element.fechaUltimoReporte }} </section>
         </td>
     </ng-container>
 
