--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/ver-detalle-avance-semanal/ver-detalle-avance-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/ver-detalle-avance-semanal/ver-detalle-avance-semanal.component.html
@@ -24,7 +24,7 @@
                 <p><b>Departamento</b>: {{ seguimientoSemanal.infoProyecto.departamento }} </p>
                 <p><b>Municipio</b>: {{ seguimientoSemanal.infoProyecto.municipio }} </p>
                 <p><b>Institución Educativa</b>: {{ seguimientoSemanal.infoProyecto.institucionEducativa }} </p>
-                <p><b>Sede</b>: {{ seguimientoSemanal.infoProyecto.sede }} </p>
+                <p><b>Sede educativa</b>: {{ seguimientoSemanal.infoProyecto.sede }} </p>
                 <p *ngIf="seguimientoSemanal.infoProyecto.fechaUltimoReporte !== undefined"><b>Fecha del último reporte</b>: {{ seguimientoSemanal.infoProyecto.fechaUltimoReporte.fechaModificacion | date: 'dd/MM/yyyy' }} </p>
               </mat-card-content>
         </mat-card>
