--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
@@ -47,7 +47,7 @@
       <p>
         <strong>Valor del contrato:</strong>
         <span>
-          {{ novedad.proyectosContrato[0].valorTotal }}
+          {{ novedad.proyectosContrato[0].valorTotal | currency:'':'symbol':'3.0' }}
         </span>
       </p>
       <p>
