--- a/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/detalle-planes-programas/detalle-planes-programas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/detalle-planes-programas/detalle-planes-programas.component.html
@@ -39,7 +39,7 @@
             <td mat-cell *matCellDef="let element" align="center">
                 <section *ngIf="element.requiereObservacion === true">
                     <button mat-raised-button color="accent" 
-                        class="btn-table expansion-style--title btn-color h-2em"
+                        class="btn-table h-2em"
                         (click)="openDialogObservacion( element.nombrePlanesProgramas, element.observaciones, element.id )">
                         <small class="mr-1em">Observaciones</small>
                     </button>
