--- a/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/tabla-inversion-recursos/tabla-inversion-recursos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/tabla-inversion-recursos/tabla-inversion-recursos.component.html
@@ -54,7 +54,7 @@
 
           <button mat-raised-button
                   color="accent"
-                  class="btn-table expansion-style--title btn-color h-2em"
+                  class="btn-table"
                   [ngClass]="getSemaforo( element.observaciones ? element.observaciones : null )"
                   (click)="this.addObservaciones( element.archivoCargueId, element.estadoCargue, element.fechaCreacion, element.observaciones ? element.observaciones : null )">
                   Observaciones
