--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-obra/validar-novedad-contrato-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-obra/validar-novedad-contrato-obra.component.html
@@ -43,7 +43,7 @@
       <p>
         <strong>Valor del contrato:</strong>
         <span>
-          {{ novedad.proyectosContrato[0].valorTotal }}
+          {{ novedad.proyectosContrato[0].valorTotal | currency: '': 'symbol-narrow':'.0-0' }}
         </span>
       </p>
       <p>
