--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-seguimiento-diario/components/ver-observaciones/ver-observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-seguimiento-diario/components/ver-observaciones/ver-observaciones.component.html
@@ -18,7 +18,11 @@
       Observaciones al seguimiento diario
     </label>
     <div class="divObservaciones">
-      <p>{{ observacionObjeto.observaciones }}</p>
+      <section
+        
+        [innerHTML]="observacionObjeto.observaciones"
+        style="margin-left: 2em"
+      ></section>
     </div>
   </div>
 </div>
