--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-seguimiento-diario/components/ver-observaciones/ver-observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-seguimiento-diario/components/ver-observaciones/ver-observaciones.component.html
@@ -1,4 +1,5 @@
-<div class="d-flex align-items-center var-main-gris mt-2em animatedDown" *ngIf="observacionObjeto === undefined">
+<div class="d-flex align-items-center var-main-gris mt-2em animatedDown" 
+     *ngIf="observacionObjeto === undefined ">
   <div class="text-area-quill">
     <label for="observacion" class="text-area-quill--label header">
       Observaciones al seguimiento diario
@@ -14,7 +15,8 @@
   </div>
 </div>
 
-<div class="d-flex align-items-center var-main-gris mt-2em animatedDown" *ngIf="observacionObjeto !== undefined">
+<div class="d-flex align-items-center var-main-gris mt-2em animatedDown" 
+     *ngIf="observacionObjeto !== undefined ">
   <div class="text-area-quill">
     <label for="observacion" class="text-area-quill--label header">
       Observaciones al seguimiento diario
