--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-seguimiento-diario/components/ver-bitacora/ver-bitacora.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-seguimiento-diario/components/ver-bitacora/ver-bitacora.component.html
@@ -11,10 +11,10 @@
     <span class="mx-1em">Fecha de último reporte:
       <b> {{ proyecto.fechaUltimoSeguimientoDiario }}</b>
     </span>
-    <span class="mx-1em">{{ proyecto.departamento }}</span>
-    <span class="mx-1em">{{ proyecto.municipio }}</span>
-    <span class="mx-1em">{{ proyecto.institucionEducativa }}</span>
-    <span class="mx-1em">{{ proyecto.sede }}</span >
+    <b class="mx-1em">{{ proyecto.departamento }}</b>
+    <b class="mx-1em">{{ proyecto.municipio }}</b>
+    <b class="mx-1em">{{ proyecto.institucionEducativa }}</b>
+    <b class="mx-1em">{{ proyecto.sede }}</b >
   </p> 
 
   <div class="busqueda">
