--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/tabla-novedades-aprobadas/tabla-novedades-aprobadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/tabla-novedades-aprobadas/tabla-novedades-aprobadas.component.html
@@ -11,12 +11,12 @@
 <div class="table-responsive">
   <table mat-table [dataSource]="dataSource" matSort>
 
-    <!-- fechaValidacionNovedad Column -->
-    <ng-container matColumnDef="fechaValidacionNovedad">
+    <!-- fechaValidacion Column -->
+    <ng-container matColumnDef="fechaValidacion">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Fecha de validación de la novedad
       </th>
-      <td mat-cell *matCellDef="let element"><b>{{element.fechaValidacion | date:'dd/MM/yyyy'}}</b></td>
+      <td mat-cell *matCellDef="let element"><b>{{element.fechaValidacion}}</b></td>
     </ng-container>
 
     <!-- numeroSolicitud Column -->
@@ -35,24 +35,24 @@
       <td mat-cell *matCellDef="let element">{{element.numeroContrato}}</td>
     </ng-container>
 
-    <!-- tipoNovedad Column -->
-    <ng-container matColumnDef="tipoNovedad">
+    <!-- novedadesSeleccionadas Column -->
+    <ng-container matColumnDef="novedadesSeleccionadas">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Tipo de novedad
       </th>
       <td mat-cell *matCellDef="let element">{{element.novedadesSeleccionadas}}</td>
     </ng-container>
 
-    <!-- estadoNovedad Column -->
-    <ng-container matColumnDef="estadoNovedad">
+    <!-- estadoDescripcion Column -->
+    <ng-container matColumnDef="estadoDescripcion">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Estado de la novedad
       </th>
       <td mat-cell *matCellDef="let element">{{element.estadoDescripcion}}</td>
     </ng-container>
 
-    <!-- estadoRegistro Column -->
-    <ng-container matColumnDef="estadoRegistro">
+    <!-- registroCompletoTramiteNovedades Column -->
+    <ng-container matColumnDef="registroCompletoTramiteNovedades">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Estado del registro
       </th>
