--- a/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/ver-detalle-registro/ver-detalle-registro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registro-seguimiento-diario/components/ver-detalle-registro/ver-detalle-registro.component.html
@@ -9,13 +9,13 @@
     Ver detalle registro de seguimiento diario {{ proyecto.llaveMen }}
   </h1>
   <p class="colorMainColor mt-05em">
-    <span class="mx-1em" *ngIf="seguimiento" >{{ seguimiento.fechaSeguimiento | date: 'dd/MM/yyyy' }}</span>
-    <span class="mx-1em">{{ proyecto.tipoIntervencion }}</span>
-    <span class="mx-1em">{{ proyecto.departamento }}</span>
-    <span class="mx-1em">{{ proyecto.municipio }}</span>
-    <span class="mx-1em">{{ proyecto.institucionEducativa }}</span>
+    <b class="mx-1em" *ngIf="seguimiento" >{{ seguimiento.fechaSeguimiento | date: 'dd/MM/yyyy' }}</b>
+    <b class="mx-1em">{{ proyecto.tipoIntervencion }}</b>
+    <b class="mx-1em">{{ proyecto.departamento }}</b>
+    <b class="mx-1em">{{ proyecto.municipio }}</b>
+    <b class="mx-1em">{{ proyecto.institucionEducativa }}</b>
     <!-- <span class="mx-1em">Inmaculada</span> -->
-    <span class="mx-1em">{{ proyecto.sede }}</span>
+    <b class="mx-1em">{{ proyecto.sede }}</b>
   </p>
 
 </section>
