--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/generacion-acta-ini-f-i-prc/generacion-acta-ini-f-i-prc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/generacion-acta-ini-f-i-prc/generacion-acta-ini-f-i-prc.component.html
@@ -162,7 +162,7 @@
                       addressForm.get('fechaPrevistaTerminacion').touched) ||
                     (addressForm.get('fechaPrevistaTerminacion')?.invalid && estaEditando)
                   "
-                  >Fecha prevista de terminación</label
+                  >Fecha prevista de terminación fase 1 – Preconstrucción</label
                 >
               </div>
               <div class="col d-flex align-items-center">
