--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/ver-detalle-editar-acta-ini-f-i-prc/ver-detalle-editar-acta-ini-f-i-prc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/ver-detalle-editar-acta-ini-f-i-prc/ver-detalle-editar-acta-ini-f-i-prc.component.html
@@ -159,7 +159,7 @@
                       'color-secondaryColor': addressForm.controls.fechaPrevistaTerminacion.invalid && estaEditando
                     }"
                   >
-                    Fecha prevista de terminación
+                    Fecha prevista de terminación fase 1 – Preconstrucción
                   </label>
                 </div>
                 <div class="col d-flex align-items-center">
@@ -268,7 +268,6 @@
                       max="31"
                       required
                       (keypress)="number($event)"
-                      (ngModelChange)="getValueDias( $event )"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;if(this.value>=this.max) return false;"
                       oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                       type="number"
@@ -464,7 +463,7 @@
         </mat-card-content>
       </mat-card>
 
-      <div *ngIf="obsSupervisor !== undefined">
+      <div *ngIf="obsSupervisor !== undefined && this.tipoCodigo == '1' && ( this.opcion == 1 || opcion === 2 )">
         <mat-card class="shipping-card mainGris">
             <mat-card-header class="header-card">
                 <mat-card-title class="header-card--text textoGris">
