--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-solicitud-pago/verdetalle-solicitud-pago.component.html
@@ -269,7 +269,7 @@
                                             </form>
                                     </section>
                                 </mat-expansion-panel>
-                                <mat-expansion-panel class="expansion-style sub-expansion-black">
+                                <mat-expansion-panel class="expansion-style sub-expansion-black" *ngIf="manejoAnticipoRequiere === true">
                                     <mat-expansion-panel-header class="expansion-style--header">
                                         <mat-panel-title class="expansion-style--title">
                                             Amortización del anticipo
