--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/autorizar-solicitud-pago/autorizar-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/autorizar-solicitud-pago/autorizar-solicitud-pago.component.html
@@ -34,7 +34,7 @@
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="fechaCreacion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de solicitud </th>
-                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
+                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCreacion }}</b> </td>
             </ng-container>
             <ng-container matColumnDef="numeroSolicitud">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de solicitud </th>
