--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/detalle-actuacion-proceso/detalle-actuacion-proceso.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/detalle-actuacion-proceso/detalle-actuacion-proceso.component.html
@@ -1,7 +1,7 @@
 <section class="container text-center">
     <div class="text-right">
         <!-- 3 va quemado-->
-        <a routerLink="/gestionarProcesoDefensaJudicial/actualizarProceso/3" mat-button color="primary"
+        <a routerLink="/gestionarProcesoDefensaJudicial/actualizarProceso/{{this.defensaJudicialId}}" mat-button color="primary"
             class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
