--- a/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/form-requisitos-tecnicos-construccion/form-requisitos-tecnicos-construccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/form-requisitos-tecnicos-construccion/form-requisitos-tecnicos-construccion.component.html
@@ -144,7 +144,9 @@
               </mat-expansion-panel-header>
     
               <div class="d-flex mt-2em text-center" style="justify-content: center;" >
-                <p class="mr-1em" style="margin-right: 2em;"> Fecha Inicio ejecución de obra: </p>
+                <label class="label-left">
+                  Fecha Inicio ejecución de obra:
+                </label>
                 <div class="col d-flex">
                   <mat-form-field class="mt-min">
                     <input
