--- a/asivamosffie.web/asivamosffie/src/app/_pages/programacion-personal-obra/components/programacion-personal-obra/programacion-personal-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/programacion-personal-obra/components/programacion-personal-obra/programacion-personal-obra.component.html
@@ -5,7 +5,7 @@
         </a>
     </div>
     <h1 class="title-menu--h1">
-        Registrar información de personal de obra
+        Registrar programación de personal de obra
     </h1>
     <button mat-mini-fab color="primary" class="btn-info" (click)="verAyuda = !verAyuda">?</button>
   
