--- a/asivamosffie.web/asivamosffie/src/app/_pages/programacion-personal-obra/components/tabla-registro-programacion/tabla-registro-programacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/programacion-personal-obra/components/tabla-registro-programacion/tabla-registro-programacion.component.html
@@ -37,7 +37,7 @@
     </ng-container>
 
     <ng-container matColumnDef="sede">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Sede </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Sede educativa </th>
         <td mat-cell *matCellDef="let element" align="center"> {{ element.sede }} </td>
     </ng-container>
 
