--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/ver-detalle-editar-actuacion-proceso/ver-detalle-editar-actuacion-proceso.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/ver-detalle-editar-actuacion-proceso/ver-detalle-editar-actuacion-proceso.component.html
@@ -7,14 +7,19 @@
         </a>
     </div>
     <h1 class="title-menu--h1">
-        Ver detalle/Editar registro actuación de proceso {{defensaJudicial?.numeroProceso}}
-    </h1>
+        <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
+            Ver detalle registro actuación de proceso {{defensaJudicial?.numeroProceso}}
+        </ng-container>
+        <ng-template #noEsVerDetalle>
+             Ver detalle/Editar registro actuación de proceso {{defensaJudicial?.numeroProceso}}
+        </ng-template>  
+      </h1>
     <p class="info-sub-title">
         <span>Número de contrato: <b> {{defensaJudicial?.numeroProceso}}</b></span>
         <span>Tipo de acción: <b> {{defensaJudicial?.tipoAccionCodigoNombre}}</b></span>
         <span>Jurisdicción: <b> {{defensaJudicial?.jurisdiccionCodigoNombre}}</b></span>
     </p>
-    <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
+    <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()" *ngIf="!esVerDetalle">
         <mat-card class="shipping-card">
             <mat-card-content style="text-align: left;">
                 <div class="row">
@@ -341,4 +346,33 @@
             </button>
         </div>
     </form>
+    <div *ngIf="esVerDetalle && defensaJudicial">
+        <mat-card class="shipping-card mainGris">
+            <mat-card-content style="text-align: left;">
+                <p><b>Estado de avance proceso:</b> {{estadoProceso}} </p>
+                <p><b>Actuación adelantada:</b></p>
+                <p [innerHTML]="defensaJudicial.actuacionAdelantada"></p>
+                <p><b>Próxima actuación requerida:</b></p>
+                <p [innerHTML]="defensaJudicial.proximaActuacion"></p>
+                <p><b>Fecha de vencimiento de términos para la próxima actuación requerida:</b> {{defensaJudicial.fechaVencimiento | date:'dd/MM/yyyy'}}</p>
+                <p><b>¿Esta actuación requiere la participación o insumo del supervisor del contrato?:</b> <span *ngIf="defensaJudicial.esRequiereSupervisor === true">Si</span><span *ngIf="defensaJudicial.esRequiereSupervisor === false">No</span></p>
+                <p><b>Observaciones:</b></p>
+                <p *ngIf="defensaJudicial.observaciones != null && defensaJudicial.observaciones != ''"
+                [innerHTML]="defensaJudicial.observaciones"
+                 ></p>
+                <p><b>¿El proceso tiene actuación definitiva (sentencia, o acto de autocomposición procesal - Transacción,
+                        Conciliación, Desistimiento o un convencimiento-), ¿y se considera cerrado el proceso?:</b> <span *ngIf="defensaJudicial.esprocesoResultadoDefinitivo === true">Si</span><span *ngIf="defensaJudicial.esprocesoResultadoDefinitivo === false">No</span></p>
+            </mat-card-content>
+        </mat-card>
+        <mat-card class="shipping-card mainGris">
+            <mat-card-header class="header-card">
+                <mat-card-title class="header-card--text textoGris">
+                    Soporte de la actuación
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content style="text-align: left;">
+                <p><b>{{defensaJudicial.rutaSoporte}}</b></p>
+            </mat-card-content>
+        </mat-card>
+    </div>
 </section>
